<resources>
    <string name="app_name">FlyLineCalculator</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="onehand">OneHand</string>
    <string name="grams">GRAMS</string>
    <string name="grain">GRAINS</string>
    <string name="loading">Load</string>
    <string name="plus_minus">+-</string>
    <string name="grams_small">grams</string>
    <string name="grains_small">grains</string>
    <string name="single_hand_rod">Single Hand Rod</string>
    <string name="single">Single</string>
    <string name="weight">Rod weight</string>
    <string name="switch_rod">Switch Rod</string>
    <string name="switch_up">Switch</string>
    <string name='rod2'>Rod#:</string>
    <string name="rod">Rod#:</string>
    <string name="double_name">Double</string>
    <string name="switch_name">Switch</string>
    <string name="double_hand_rod">Double Hand Rod</string>

</resources>