<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.single_rod.SingleHandFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/rodWeightTextViewDouble"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="20dp"
                    android:textSize="30sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/textViewDouble"
                    app:layout_constraintTop_toBottomOf="@+id/singleRecycleViewDouble"
                    tools:text="5" />

                <TextView
                    android:id="@+id/setLoadingGrainsTextViewDouble"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textSize="30sp"
                    app:layout_constraintStart_toEndOf="@+id/plusMinusTextViewGrainDouble"
                    app:layout_constraintTop_toBottomOf="@+id/setLoadingTextViewGramDouble"
                    tools:text="8" />

                <TextView
                    android:id="@+id/setGrainTextViewDouble"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="10dp"
                    android:textSize="30sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/grainTextViewDouble"
                    app:layout_constraintTop_toBottomOf="@+id/setGramTextViewDouble"
                    tools:text="120" />

                <TextView
                    android:id="@+id/smallGramTextViewDouble"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/grams_small"
                    android:textSize="30sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/setLoadingTextViewGramDouble"
                    app:layout_constraintTop_toBottomOf="@+id/setGrainTextViewDouble" />

                <TextView
                    android:id="@+id/setLoadingTextViewGramDouble"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textSize="30sp"
                    app:layout_constraintStart_toEndOf="@+id/plusMinusTextViewGramDouble"
                    app:layout_constraintTop_toBottomOf="@+id/setGrainTextViewDouble"
                    tools:text="25" />

                <TextView
                    android:id="@+id/loadingTextViewDouble"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/loading"
                    android:textSize="30sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/grainTextViewDouble" />

                <TextView
                    android:id="@+id/plusMinusTextViewGramDouble"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/plus_minus"
                    android:textSize="30sp"
                    app:layout_constraintStart_toEndOf="@+id/loadingTextViewDouble"
                    app:layout_constraintTop_toBottomOf="@+id/setGrainTextViewDouble" />

                <TextView
                    android:id="@+id/gramTextViewDouble"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/grams"
                    android:textSize="30sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textViewDouble" />

                <TextView
                    android:id="@+id/plusMinusTextViewGrainDouble"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="128dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/plus_minus"
                    android:textSize="30sp"
                    app:layout_constraintEnd_toStartOf="@+id/setLoadingTextViewGramDouble"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/plusMinusTextViewGramDouble" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/singleRecycleViewDouble"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/singleWeightMainViewDouble">

                </androidx.recyclerview.widget.RecyclerView>

                <TextView
                    android:id="@+id/grainTextViewDouble"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/grain"
                    android:textSize="30sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/gramTextViewDouble" />

                <TextView
                    android:id="@+id/setGramTextViewDouble"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="10dp"
                    android:textSize="30sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/gramTextViewDouble"
                    app:layout_constraintTop_toBottomOf="@+id/rodWeightTextViewDouble"
                    tools:text="50" />

                <TextView
                    android:id="@+id/singleWeightMainViewDouble"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/weight"
                    android:textSize="30sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textViewDouble"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/rod"
                    android:textSize="30sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/singleRecycleViewDouble" />

                <TextView
                    android:id="@+id/smallGrainTextViewDouble"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/grains_small"
                    android:textSize="30sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/setLoadingGrainsTextViewDouble"
                    app:layout_constraintTop_toBottomOf="@+id/smallGramTextViewDouble" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>