<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.single_rod.SingleHandFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/rodWeightTextViewSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="20dp"
                    android:textSize="30sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/switchTextView"
                    app:layout_constraintTop_toBottomOf="@+id/singleRecycleViewSwitch"
                    tools:text="5" />

                <TextView
                    android:id="@+id/setLoadingGrainsTextViewSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textSize="30sp"
                    app:layout_constraintStart_toEndOf="@+id/plusMinusTextViewGrainSwitch"
                    app:layout_constraintTop_toBottomOf="@+id/setLoadingTextViewGramSwitch"
                    tools:text="8" />

                <TextView
                    android:id="@+id/setGrainTextViewSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="10dp"
                    android:textSize="30sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/grainTextViewSwitch"
                    app:layout_constraintTop_toBottomOf="@+id/setGramTextViewSwitch"
                    tools:text="120" />

                <TextView
                    android:id="@+id/smallGramTextViewSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/grams_small"
                    android:textSize="30sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/setLoadingTextViewGramSwitch"
                    app:layout_constraintTop_toBottomOf="@+id/setGrainTextViewSwitch" />

                <TextView
                    android:id="@+id/setLoadingTextViewGramSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textSize="30sp"
                    app:layout_constraintStart_toEndOf="@+id/plusMinusTextViewGramSwitch"
                    app:layout_constraintTop_toBottomOf="@+id/setGrainTextViewSwitch"
                    tools:text="25" />

                <TextView
                    android:id="@+id/loadingTextViewSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/loading"
                    android:textSize="30sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/grainTextViewSwitch" />

                <TextView
                    android:id="@+id/plusMinusTextViewGramSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/plus_minus"
                    android:textSize="30sp"
                    app:layout_constraintStart_toEndOf="@+id/loadingTextViewSwitch"
                    app:layout_constraintTop_toBottomOf="@+id/setGrainTextViewSwitch" />

                <TextView
                    android:id="@+id/gramTextViewSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/grams"
                    android:textSize="30sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/switchTextView" />

                <TextView
                    android:id="@+id/plusMinusTextViewGrainSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="128dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/plus_minus"
                    android:textSize="30sp"
                    app:layout_constraintEnd_toStartOf="@+id/setLoadingTextViewGramSwitch"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/plusMinusTextViewGramSwitch" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/singleRecycleViewSwitch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/singleWeightMainViewSwitch">

                </androidx.recyclerview.widget.RecyclerView>

                <TextView
                    android:id="@+id/grainTextViewSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/grain"
                    android:textSize="30sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/gramTextViewSwitch" />

                <TextView
                    android:id="@+id/setGramTextViewSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="10dp"
                    android:textSize="30sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/gramTextViewSwitch"
                    app:layout_constraintTop_toBottomOf="@+id/rodWeightTextViewSwitch"
                    tools:text="50" />

                <TextView
                    android:id="@+id/singleWeightMainViewSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/weight"
                    android:textSize="30sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/switchTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/rod"
                    android:textSize="30sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/singleRecycleViewSwitch" />

                <TextView
                    android:id="@+id/smallGrainTextViewSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/grains_small"
                    android:textSize="30sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/setLoadingGrainsTextViewSwitch"
                    app:layout_constraintTop_toBottomOf="@+id/smallGramTextViewSwitch" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>